correct alignment for icon images in "Add new ..." dropdown menu, fixes #57

--- a/plone/app/toolbar/resources/src/plone.less
+++ b/plone/app/toolbar/resources/src/plone.less
@@ -7,6 +7,8 @@
   .navbar-inner { .border-radius(0); padding-left: 1em; padding-right: 1em }
   .container { width: 100% }
   .dropdown-menu {
+    a { padding: 3px 9px; }
+    a img { padding-right: 3px; }
     .contenttype-image > a,
     .contenttype-file > a,
     .contenttype-document > a,
